src/test/resources/arp/invalid/arp_nonlinear_rdw.sil
field f: Int

method foo(x: Ref)
//:: ExpectedOutput(internal:feature.unsupported)
requires acc(x.f, rdw*rdw)
//:: ExpectedOutput(internal:feature.unsupported)
ensures acc(x.f, rdw*rdw)
{
}